vlib/v/checker/tests/shift_op_wrong_left_type_err.v
fn main() {
	0.5 << 1
}